# mcp.moukaeritai.work

./: .gitignore  README.md
.codex/: config.toml
.devcontainer/: devcontainer.json
.gemini/: settings.json
servers/mcp_efu/: METHODS.md  README.md  client.py  package-lock.json  pyproject.toml
servers/mcp_efu/mcp_efu/: core.py  main.py  test_runner.py  transport.py
servers/mcp_efu/schema/: efu-metadata.jsonld  efu_format.jsonld
servers/mcp_efu/tests/: test_cli.py  test_core.py  test_stdio.py  test_tcp.py  test_transport.py
servers/simple_proxy_server/: README.md  main.py
