[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_efu"
version = "0.1.0"
description = "A simple MCP server to list files in the local filesystem."
authors = [{ name = "AI Assistant" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."console_scripts"]
mcp_efu = "mcp_efu.main:main"
