[tool.poetry]
name = "mcp_efu"
version = "0.1.0"
description = "A simple MCP server to list files in the local filesystem."
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mcp_efu"}]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.scripts]
mcp_efu = "mcp_efu.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"